Update index and start blackjack

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blakcjack</title>
+        <title>Blackjack</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <script src="blackjack.js"></script>
     </head>
@@ -14,9 +14,9 @@
             <p>Login</p>
             <form>
                 <label for="username">Username</label>
-                <input id="username" name="username" placeholder="Enter your username">
+                <input id="username" name="username" placeholder="Blackjackplayer123">
                 <label for="password">Password</label>
-                <input id="password" name="password" placeholder="Enter your password">
+                <input id="password" name="password" placeholder="21isfun" type="password">
             </form>
             <p>Don't have an account? <a href="new_account.html">Create one!</a></p>
         </div>
